# purescript-analyzer

./: .gitignore  ACKNOWLEDGEMENTS.md  AGENTS.md  Cargo.toml  LICENSE  README.md  THIRDPARTY.toml  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml
compat/: Cargo.toml  download-registry.js  package.json
compat/src/: lib.rs  main.rs
compiler-bin/: Cargo.toml
compiler-bin/src/: cli.rs  extension.rs  lib.rs  logging.rs  lsp.rs  main.rs
compiler-bin/src/lsp/: build.rs  error.rs  event.rs
compiler-compatibility/: Cargo.toml
compiler-compatibility/command/: Cargo.toml
compiler-compatibility/command/src/: compat.rs  error.rs  layout.rs  main.rs  report.rs  repositories.rs  resolver.rs  storage.rs  trace.rs  types.rs  unpacker.rs
compiler-compatibility/registry/: Cargo.toml
compiler-compatibility/registry/src/: error.rs  layout.rs  reader.rs  types.rs
compiler-compatibility/src/: compat.rs  error.rs  layout.rs  loader.rs  main.rs  registry.rs  resolver.rs  storage.rs  trace.rs  types.rs  unpacker.rs
compiler-compatibility/verifier/: Cargo.toml
compiler-compatibility/verifier/src/: cache.rs  cli.rs  compile.rs  error.rs  main.rs  report.rs  selection.rs  sources.rs
compiler-core/building/: Cargo.toml
compiler-core/building/src/: cancelling_runtime.rs  engine.rs  lib.rs  module_name_map.rs  parallel_runtime.rs  prim.rs  runtime.rs
compiler-core/checking/: Cargo.toml
compiler-core/checking/src/: algorithm.rs  check.rs  context.rs  core.rs  debruijn.rs  error.rs  implication.rs  interners.rs  lib.rs  safety.rs  source.rs  state.rs  trace.rs
compiler-core/checking2/: Cargo.toml
compiler-core/checking2/src/: context.rs  core.rs  error.rs  implication.rs  interners.rs  kind.rs  lib.rs  safety.rs  source.rs  state.rs
compiler-core/diagnostics/: Cargo.toml
compiler-core/diagnostics/src/: context.rs  convert.rs  lib.rs  model.rs  render.rs
compiler-core/lowering/: Cargo.toml  build.rs
compiler-core/lowering/src/: algorithm.rs  error.rs  intermediate.rs  lib.rs  recover.rs  scope.rs  source.rs
compiler-core/lowering/tests/: scope.rs
compiler-core/resolving/: Cargo.toml
compiler-core/resolving/src/: algorithm.rs  error.rs  lib.rs
compiler-core/sugar/: Cargo.toml
compiler-core/sugar/src/: bracketing.rs  lib.rs  sections.rs
compiler-lsp/analyzer/: Cargo.toml
compiler-lsp/analyzer/src/: common.rs  completion.rs  completion_v2.rs  definition.rs  document_highlight.rs  document_symbols.rs  error.rs  extract.rs  hover.rs  lib.rs  locate.rs  references.rs  symbols.rs
compiler-lsp/server/: Cargo.toml
compiler-lsp/server/src/: completion.rs  definition.rs  extension.rs  hover.rs  lib.rs  locate.rs
compiler-lsp/spago/: Cargo.toml
compiler-lsp/spago/src/: lib.rs  lockfile.rs
compiler-lsp/spago/tests/: lockfile.rs
compiler-scripts/: Cargo.toml
compiler-scripts/src/: lib.rs  main.rs  test_runner.rs
compiler-scripts/src/test_runner/: category.rs  cli.rs  decision.rs  fixture.rs  nextest.rs  pending.rs  traces.rs  ui.rs
crates/analyzer/: Cargo.toml
crates/analyzer-index/: Cargo.toml
crates/analyzer-index/src/: id.rs  lib.rs  module.rs  nominal.rs  positional.rs
crates/analyzer-module/: Cargo.toml
crates/analyzer-module/src/: id.rs  index.rs  infer.rs  interner.rs  lib.rs  scope.rs  surface.rs
crates/analyzer-scope/: Cargo.toml
crates/analyzer-scope/src/: collect.rs  lib.rs  resolve.rs
crates/analyzer-surface/: Cargo.toml  build.rs
crates/analyzer-surface/src/: lib.rs  lower.rs  tree.rs  visit.rs
crates/analyzer/src/: _scope.rs  id.rs  index.rs  infer.rs  lib.rs  lower.rs  names.rs  resolver.rs  scope.rs  source.rs  sugar.rs  surface.rs
crates/building/: Cargo.toml
crates/building/src/: base.rs  files.rs  lib.rs  module_name_map.rs  parallel_runtime.rs  runtime.rs
crates/demo/: Cargo.toml
crates/demo-bin/: Cargo.toml
crates/demo-bin/src/: main.rs
crates/demo/src/: declaration_map.rs  id.rs  infer.rs  lib.rs  module_map.rs  source.rs  surface.rs  surface_ast.rs
crates/demo/tests/: lib.rs
crates/formatter/: Cargo.toml
crates/formatter/src/: main.rs
crates/indexing/: Cargo.toml  build.rs
crates/indexing/src/: algorithm.rs  error.rs  id.rs  index.rs  indexes.rs  items.rs  lib.rs  source.rs  sourcemap.rs  wellformed.rs
crates/indexing/tests/: indexing.rs
cst-id/: Cargo.toml
cst-id/src/: lib.rs
lsp/: Cargo.toml
lsp/src/: backend.rs  definition.rs  hover.rs  lib.rs  locate.rs  main.rs  spago.rs
lsp/src/backend/: capability.rs  definition.rs  hover.rs  locate.rs
tests-integration/: Cargo.toml  build.rs
tests-integration/src/: core.rs  generated.rs  lib.rs  lsp.rs  trace.rs
tests-integration/src/lsp/: render.rs
tests-integration/tests/: bracketing.rs  checking.rs  deferred_resolution.rs  lowering.rs  lowering_scc.rs  lsp.rs  resolving.rs
tests-integration/tests/checking/: generated.rs
tests-integration/tests/checking2/: generated.rs
tests-integration/tests/lowering/: generated.rs
tests-integration/tests/lsp/: generated.rs
tests-integration/tests/resolving/: generated.rs
tests-integration/tests/snapshots/: checking__beta_reduction_const_a.snap  checking__beta_reduction_const_b.snap  checking__beta_reduction_id.snap  checking__class_basic.snap  checking__class_functor.snap  checking__class_monad_state.snap  checking__class_multi_param.snap  checking__class_phantom.snap  checking__class_superclass.snap  checking__class_with_signature.snap  checking__constrained_invalid_constraint.snap  checking__constrained_invalid_type.snap  checking__data_arity_fail.snap  checking__data_mutual.snap  checking__data_recursive.snap  checking__expand_identity_synonym.snap  checking__expand_simple_synonym.snap  checking__foreign_poly.snap  checking__fresh_unification_inversion.snap  (+118 more)
tests-package-set/: Cargo.toml  build.rs  download-registry.js  package.json  pnpm-lock.yaml  purescript-acme.json  purescript-core.json
tests-package-set/benches/: checking_multi_core.rs  checking_single_core.rs  parsing.rs
tests-package-set/src/: lib.rs
tests-package-set/tests/: parsing.rs
(+3854 files in other folders)
