[workspace]
members = [
  "compiler-bin",
  "compiler-compatibility",
  "compiler-core/*",
  "compiler-lsp/*",
  "compiler-scripts",
  "docs/src/wasm",
  "purescript-registry",
  "tests-integration",
  "tests-package-set",
]
default-members = [
  "compiler-core/*",
  "compiler-lsp/*",
]
resolver = "3"

[profile.dev.package.insta]
opt-level = 3
