[package]
name = "compiler-bin"
version = "0.1.0"
edition = "2024"

[dependencies]
analyzer = { version = "0.1.0", path = "../compiler-lsp/analyzer" }
async-lsp = "0.2.2"
parking_lot = "0.12.4"
serde = { version = "1.0.219", features = ["derive"] }
spago = { version = "0.1.0", path = "../compiler-lsp/spago" }
tokio = { version = "1.46.1", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[[bin]]
name = "purescript-analyzer"
