[package]
name = "purescript-analyzer"
version = "0.0.2"
edition = "2024"
authors = ["Justin Garcia <purefunctor@gmail.com>"]
license = "BSD-3-Clause"
description = "Language server implementation for the PureScript programming language."
readme = "../README.md"
homepage = "https://github.com/purefunctor/purescript-analyzer"
repository = "https://github.com/purefunctor/purescript-analyzer"
keywords = ["purescript", "language server"]
categories = ["compilers"]

[dependencies]
analyzer = { version = "0.1.0", path = "../compiler-lsp/analyzer" }
async-lsp = "0.2.2"
clap = { version = "4.5.41", features = ["derive"] }
parking_lot = "0.12.4"
prim = { version = "0.1.0", path = "../compiler-core/prim" }
serde = { version = "1.0.219", features = ["derive"] }
spago = { version = "0.1.0", path = "../compiler-lsp/spago" }
tokio = { version = "1.46.1", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
