[package]
name = "purescript-analyzer"
version = "0.0.9"
edition = "2024"
authors = ["Justin Garcia <purefunctor@gmail.com>"]
license = "BSD-3-Clause"
description = "Language server implementation for the PureScript programming language."
readme = "../README.md"
homepage = "https://github.com/purefunctor/purescript-analyzer"
repository = "https://github.com/purefunctor/purescript-analyzer"
keywords = ["purescript", "language server"]
categories = ["compilers"]

[dependencies]
analyzer = { version = "0.1.0", path = "../compiler-lsp/analyzer" }
async-lsp = "0.2.2"
clap = { version = "4.5.47", features = ["derive"] }
files = { version = "0.1.0", path = "../compiler-core/files" }
globset = "0.4.18"
lowering = { version = "0.1.0", path = "../compiler-core/lowering" }
parking_lot = "0.12.4"
path-absolutize = "3.1.1"
radix_trie = "0.3.0"
resolving = { version = "0.1.0", path = "../compiler-core/resolving" }
rowan = "0.16.1"
serde = { version = "1.0.219", features = ["derive"] }
spago = { version = "0.1.0", path = "../compiler-lsp/spago" }
stabilizing = { version = "0.1.0", path = "../compiler-core/stabilizing" }
syntax = { version = "0.1.0", path = "../compiler-core/syntax" }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
url = "2.5.7"
walkdir = "2.5.0"

[target.'cfg(not(unix))'.dependencies]
tokio-util = { version = "0.7.16", features = ["compat"] }
