[package]
name = "compiler-compatibility"
version = "0.1.0"
edition = "2024"

[dependencies]
purescript-registry = { path = "../purescript-registry" }
clap = { version = "4", features = ["derive"] }
git2 = "0.20"
reqwest = { version = "0.12", features = ["blocking"] }
semver = "1"
flate2 = "1"
tar = "0.4"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22.1"
