[package]
name = "cst-id"
version = "0.1.0"
edition = "2024"

[dependencies]
la-arena = "0.3.1"
paste = "1.0.15"
rowan = "0.16.1"
syntax = { version = "0.1.0", path = "../compiler-core/syntax" }

[dev-dependencies]
lexing = { path = "../compiler-core/lexing" }
parsing = { path = "../compiler-core/parsing" }
