[package]
name = "lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
building = { version = "0.1.0", path = "../crates/building" }
files = { version = "0.1.0", path = "../crates/files" }
glob = "0.3.2"
indexing = { version = "0.1.0", path = "../crates/indexing" }
lexing = { version = "0.1.0", path = "../crates/lexing" }
lowering = { version = "0.1.0", path = "../crates/lowering" }
parsing = { version = "0.1.0", path = "../crates/parsing" }
resolving = { version = "0.1.0", path = "../crates/resolving" }
smol_str = "0.3.2"
syntax = { version = "0.1.0", path = "../crates/syntax" }
tokio = { version = "1.45.0", features = ["full"] }
tower-lsp = "0.20.0"
