[package]
name = "lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
building = { version = "0.1.0", path = "../crates/building" }
files = { version = "0.1.0", path = "../crates/files" }
glob = "0.3.2"
globset = "0.4.16"
indexing = { version = "0.1.0", path = "../crates/indexing" }
lexing = { version = "0.1.0", path = "../crates/lexing" }
line-index = "0.1.2"
lowering = { version = "0.1.0", path = "../crates/lowering" }
parsing = { version = "0.1.0", path = "../crates/parsing" }
resolving = { version = "0.1.0", path = "../crates/resolving" }
rowan = "0.16.1"
smol_str = "0.3.2"
syntax = { version = "0.1.0", path = "../crates/syntax" }
tokio = { version = "1.45.0", features = ["full"] }
tower-lsp = "0.20.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
walkdir = "2.5.0"

[[bin]]
name = "purescript-analyzer"
