[package]
name = "tests-integration"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
analyzer = { version = "0.1.0", path = "../compiler-lsp/analyzer" }
async-lsp = "0.2.2"
files = { version = "0.1.0", path = "../compiler-core/files" }
glob = "0.3.2"
indexing = { version = "0.1.0", path = "../compiler-core/indexing" }
line-index = "0.1.2"
lowering = { version = "0.1.0", path = "../compiler-core/lowering" }
resolving = { version = "0.1.0", path = "../compiler-core/resolving" }
smol_str = "0.3.2"

[build-dependencies]
convert_case = "0.8.0"
itertools = "0.14.0"

[dev-dependencies]
insta = "1.43.1"
