[package]
name = "tests-package-set"
version = "0.1.0"
edition = "2024"

[dependencies]
building = { version = "0.1.0", path = "../compiler-core/building" }
criterion = { version = "0.6.0", features = ["html_reports"] }
files = { version = "0.1.0", path = "../compiler-core/files" }
glob = "0.3.3"
itertools = "0.14.0"
lexing = { version = "0.1.0", path = "../compiler-core/lexing" }
parsing = { version = "0.1.0", path = "../compiler-core/parsing" }
rayon = "1.11.0"
smol_str = "0.3.2"
url = "2.5.7"

[[bench]]
name = "parsing"
harness = false
