[package]
name = "tests-package-set"
version = "0.1.0"
edition = "2024"

[dependencies]
building = { version = "0.1.0", path = "../compiler-core/building" }
criterion = { version = "0.6.0", features = ["html_reports"] }
cst-id = { version = "0.1.0", path = "../cst-id" }
files = { version = "0.1.0", path = "../compiler-core/files" }
glob = "0.3.3"
indexing = { version = "0.1.0", path = "../compiler-core/indexing" }
lexing = { version = "0.1.0", path = "../compiler-core/lexing" }
parsing = { version = "0.1.0", path = "../compiler-core/parsing" }
rayon = "1.11.0"
url = "2.5.7"

[[bench]]
name = "parsing"
harness = false
