[package]
name = "building"
version = "0.1.0"
edition = "2021"

[dependencies]
building-types = { version = "0.1.0", path = "../building-types" }
files = { version = "0.1.0", path = "../files" }
indexing = { version = "0.1.0", path = "../indexing" }
interner = { version = "0.1.0", path = "../interner" }
lexing = { version = "0.1.0", path = "../lexing" }
lock_api = "0.4.13"
lowering = { version = "0.1.0", path = "../lowering" }
parking_lot = "0.12.3"
parsing = { version = "0.1.0", path = "../parsing" }
rayon = "1.10.0"
resolving = { version = "0.1.0", path = "../resolving" }
rustc-hash = "2.1.0"
string-interner = "0.19.0"
thread_local = "1.1.8"

[dev-dependencies]
la-arena = "0.3.1"
