[package]
name = "building"
version = "0.1.0"
edition = "2024"

[dependencies]
building-types = { version = "0.1.0", path = "../building-types" }
files = { version = "0.1.0", path = "../files" }
indexing = { version = "0.1.0", path = "../indexing" }
lexing = { version = "0.1.0", path = "../lexing" }
lock_api = "0.4.13"
lowering = { version = "0.1.0", path = "../lowering" }
parking_lot = "0.12.4"
parsing = { version = "0.1.0", path = "../parsing" }
resolving = { version = "0.1.0", path = "../resolving" }
rustc-hash = "2.1.1"
stabilize = { version = "0.1.0", path = "../stabilize" }
sugar = { version = "0.1.0", path = "../sugar" }
tempfile = "3.21.0"
thread_local = "1.1.9"
url = "2.5.7"

[dev-dependencies]
la-arena = "0.3.1"
