[package]
name = "checking2"
version = "0.1.0"
edition = "2024"

[dependencies]
files = { version = "0.1.0", path = "../files" }
indexing = { version = "0.1.0", path = "../indexing" }
interner = { version = "0.1.0", path = "../interner" }
lowering = { version = "0.1.0", path = "../lowering" }
smol_str = "0.3.5"
