[package]
name = "diagnostics"
version = "0.1.0"
edition = "2024"

[dependencies]
files = { version = "0.1.0", path = "../files" }
indexing = { version = "0.1.0", path = "../indexing" }
lowering = { version = "0.1.0", path = "../lowering" }
resolving = { version = "0.1.0", path = "../resolving" }
checking = { version = "0.1.0", path = "../checking" }
stabilizing = { version = "0.1.0", path = "../stabilizing" }
syntax = { version = "0.1.0", path = "../syntax" }

rowan = "0.16.1"
lsp-types = "0.95.1"
line-index = "0.1.2"
itertools = "0.14.0"
