[package]
name = "lowering"
version = "0.1.0"
edition = "2021"

[dependencies]
files = { version = "0.1.0", path = "../files" }
indexing = { version = "0.1.0", path = "../indexing" }
indexmap = "2.11.0"
itertools = "0.14.0"
la-arena = "0.3.1"
paste = "1.0.15"
resolving = { version = "0.1.0", path = "../resolving" }
rowan = "0.16.1"
rustc-hash = "2.1.1"
smol_str = "0.3.2"
syntax = { version = "0.1.0", path = "../syntax" }

[dev-dependencies]
insta = "1.43.2"
lexing = { path = "../lexing" }
parsing = { path = "../parsing" }
test_each_file = "0.3.5"
