[package]
name = "analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
async-lsp = { version = "0.2.2", features = ["tokio"] }
building = { version = "0.1.0", path = "../../compiler-core/building" }
files = { version = "0.1.0", path = "../../compiler-core/files" }
indexing = { version = "0.1.0", path = "../../compiler-core/indexing" }
itertools = "0.14.0"
la-arena = "0.3.1"
lexing = { version = "0.1.0", path = "../../compiler-core/lexing" }
line-index = "0.1.2"
lowering = { version = "0.1.0", path = "../../compiler-core/lowering" }
parsing = { version = "0.1.0", path = "../../compiler-core/parsing" }
resolving = { version = "0.1.0", path = "../../compiler-core/resolving" }
rowan = "0.16.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
smol_str = "0.3.2"
strsim = "0.11.1"
syntax = { version = "0.1.0", path = "../../compiler-core/syntax" }
tracing = "0.1.41"
