[package]
name = "spago"
version = "0.1.0"
edition = "2024"

[dependencies]
globset = "0.4.16"
rustc-hash = "2.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
smol_str = { version = "0.3.2", features = ["serde"] }
thiserror = "2.0.12"
walkdir = "2.5.0"

[dev-dependencies]
insta = "1.43.1"
itertools = "0.14.0"
url = "2.5.7"
