[package]
name = "spago"
version = "0.1.0"
edition = "2024"

[dependencies]
globset = "0.4.18"
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
smol_str = { version = "0.3.4", features = ["serde"] }
thiserror = "2.0.17"
walkdir = "2.5.0"

[dev-dependencies]
insta = "1.45.1"
itertools = "0.14.0"
url = "2.5.7"
