[package]
name = "analyzer-module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
files = { version = "0.1.0", path = "../files" }
interner = { version = "0.1.0", path = "../interner" }
itertools = "0.12.0"
la-arena = "0.3.1"
parsing = { version = "0.1.0", path = "../parsing" }
rowan = "0.15.15"
rustc-hash = "1.1.0"
salsa = "0.17.0-pre.2"
syntax = { version = "0.1.0", path = "../syntax" }
