[package]
name = "analyzer-surface"
version = "0.1.0"
edition = "2021"

[dependencies]
analyzer-index = { version = "0.1.0", path = "../analyzer-index" }
analyzer-interner = { version = "0.1.0", path = "../analyzer-interner" }
analyzer-source = { version = "0.1.0", path = "../analyzer-source" }
files = { version = "0.1.0", path = "../files" }
itertools = "0.13.0"
la-arena = "0.3.1"
paste = "1.0.15"
rowan = "0.15.15"
rustc-hash = "2.0.0"
salsa = "0.17.0-pre.2"
syntax = { version = "0.1.0", path = "../syntax" }

[dev-dependencies]
insta = "1.39.0"
test-each = "0.2.1"
