[package]
name = "analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
files = { version = "0.1.0", path = "../files" }
interner = { version = "0.1.0", path = "../interner" }
itertools = "0.12.0"
la-arena = "0.3.1"
parsing = { version = "0.1.0", path = "../parsing" }
paste = "1.0.14"
petgraph = "0.6.4"
pretty = { version = "0.12.3", features = ["termcolor"] }
rowan = "0.15.15"
rustc-hash = "1.1.0"
salsa = "0.17.0-pre.2"
syntax = { version = "0.1.0", path = "../syntax" }

[dev-dependencies]
insta = "1.36.1"
