[package]
name = "demo-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
demo = { version = "0.1.0", path = "../demo" }
files = { version = "0.1.0", path = "../files" }
glob = "0.3.1"
rowan = "0.15.11"
salsa = "0.17.0-pre.2"
syntax = { version = "0.1.0", path = "../syntax" }
tokio = { version = "1.32.0", features = ["macros", "rt", "full"] }
tower-lsp = "0.20.0"
