[package]
name = "formatter-module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parsing = { version = "0.1.0", path = "../parsing" }
syntax = { version = "0.1.0", path = "../syntax" }
gumdrop = "0.8.1"

[[bin]]
name = "formatter"
path = "src/main.rs"

